test/corpus/L1/positive/literal-symbol-keyword.st
"---
id: literal-symbol-keyword
kind: positive
phase: parse
layer: L1
spec: anexoA:literal.symbol
origin: spec-ANSI
section: literal.symbol
note: keyword symbol with multiple colons
---"
#at:put:
