test/corpus/L1/negative/unterminated-char.st
"---
id: unterminated-char
kind: negative
phase: lex
layer: L1
spec: anexoA:error.unterminated-char
origin: spec-ANSI
section: error.unterminated-char
codes: E_UNTERMINATED_CHAR
---"
$
